# minimal

./: .gitignore
cli/: CMakeLists.txt  minimal.cpp
gui/: CMakeLists.txt  minimal.cpp
